<resources>
    <string name="app_name">SHNITSIK</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register An Employee</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insights">Insights</string>
    <string name="register_an_emplyee">Register An Emplyee</string>
    <string name="edit_info">Edit Info</string>
    <string name="home">Home</string>
    <string name="previous_orders">Previous Orders</string>
    <string name="reviews">Reviews</string>
</resources>